# base64file

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  test.py
base64file/: __init__.py  base64_file.py  base85_file.py  chacha20_file.py  convenience.py
